# web-fetcher

./: .gitignore  .wf_installed  ARCHITECTURE_GLOBAL_COMMAND.md  ARCHITECTURE_VALIDATION_REPORT.md  ARCHITECTURE_VALIDATION_TEST.md  ARCHITECT_FINAL_VALIDATION_REPORT.md  ARCHITECT_VALIDATION_REPORT.md  ARCHITECT_VALIDATION_TESTS.py  ARCHITECT_VALIDATION_TESTS.sh  CLEANUP_REPORT.md  ENGINEER_HANDOFF_PLAN.md  IMAGE_HANDLING_ARCHITECTURE.md  IMAGE_HANDLING_IMPLEMENTATION_GUIDE.md  IMAGE_HANDLING_TEST_CASES.md  INSTALL.md  PHASE1_ACCEPTANCE_CRITERIA.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE2_URLLIB_TRANSITION_GUIDE.md  PROJECT_RESTRUCTURE_PLAN.md  QUICK_START.md  README.md  REDIRECT_RESOLUTION_IMPLEMENTATION_GUIDE.md  RESTRUCTURE_COMPLETION_REPORT.md  ROOT_FILES_DEPENDENCY_ANALYSIS.md  STEP2_IMPLEMENTATION_SUMMARY.md  TASK-003-PHASE-3-REVIEW.md  WECHAT_FIX_IMPLEMENTATION_GUIDE.md  WECHAT_PARSER_FIX_SPEC.md  WECHAT_PARSER_TEST_SPEC.md  WF_DEPENDENCIES.md  XHS_CODE_ARCHITECTURE.md  XHS_ENHANCEMENT_TEST_CASES.md  XHS_EXTRACTION_TEST_CASES.md  XHS_IMAGE_ENHANCEMENT_SPEC.md  XHS_IMPLEMENTATION_ROADMAP.md  XHS_URL_EXTRACTION_FIX_SPEC.md  XIAOHONGSHU_CODE_SPECIFICATIONS.md  XIAOHONGSHU_DEPLOYMENT_CHECKLIST.md  XIAOHONGSHU_FIX_IMPLEMENTATION_GUIDE.md  XIAOHONGSHU_TEST_STRATEGY.md  (+61 more)
TASKS/: 0_Chrome启动标志修复.md  1_Immediate_SSL_Domain_Routing.md  1_修复Selenium模式可用性检测.md  1_完成Selenium错误提示优化.md  1_建立统一错误处理框架.md  1_新增Chrome调试守护脚本.md  2_改进Selenium失败报告输出.md  3_实现集中化错误报告模块.md  3_新增Chrome调试守护脚本.md  3_解析器架构优化.md  5_ChromeDriver_Version_Management.md  7_Unified_Error_Classification_System.md  (+36 more)
(+216 files in other folders)
